<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:background="@drawable/dialog_shape"
        android:padding="14dp">

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:gravity="center"
            android:text="@string/support_us"
            android:textSize="@dimen/base_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/message"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/never"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@color/gray"
                android:text="@string/never"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
            <Button
                android:id="@+id/later"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@color/gray"
                android:text="@string/later"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/ok_sure"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/circle"
            android:tint="@color/colorAccent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_star_black_24dp"
            android:tint="@color/white" />
    </RelativeLayout>
</RelativeLayout>