<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_shape"
        android:orientation="vertical"
        android:padding="14dp">

        <TextView
            android:id="@+id/setting_option_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tool:text="@string/choose_history_buffer_size" />

        <TextView
            android:paddingTop="@dimen/card_margin"
            android:id="@+id/setting_option_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tool:text="@string/default_history_buffer_size_means" />

        <LinearLayout
            android:paddingTop="@dimen/card_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seekBar_progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                tool:text="Buffer size: 3" />

            <TextView
                android:id="@+id/seekBar_progress_requests_needs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                tool:text="Requests needs: 1" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="20"
            android:paddingTop="@dimen/card_margin" />

        <TextView
            android:paddingTop="@dimen/card_margin"
            android:id="@+id/warning_message"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/orange_900"
            android:visibility="gone"
            tool:text="Warning" />

        <RelativeLayout
            android:paddingTop="@dimen/card_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_toLeftOf="@+id/apply_btn"
                android:id="@+id/cancel"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <Button
                android:layout_alignParentEnd="true"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:id="@+id/apply_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>